--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 body {
     padding:0px;
     margin:0px;
-    background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("https://miro.medium.com/v2/resize:fit:4800/format:webp/1*urFZLIFxxgz0C6EEA23IHg.png") center center;
+    background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("https://assets.weforum.org/editor/fljkaKvxWMu7Q0Kgvr7q1oqkQLL_8cjRa-MES0jPBYo.jpg") center center;
     background-size:cover;
     width:100vw;
     height:100vh;
